tests/fixtures/invalid/list_gt_dict.py
# Cannot compare with > List[int] and Dict[str, int]
x: bool = [1, 2, 3] > {"a": 1}
